# readme_score_mcp

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml  roast_job_autopilot.md
prompts/: roast_system.txt
readme_score/: __init__.py  fetcher.py  server.py
tests/: test_fetcher.py  test_scorer.py
tests/fixtures/: bad_readme.md  good_readme.md
