[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readme-score"
version = "0.1.0"
description = "MCP server that roasts and scores README quality with savage-but-constructive commentary"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ViswaSrimaan"},
]
keywords = ["mcp", "mcp-server", "readme", "developer-tools", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
readme-score = "readme_score.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
